--- a/calculator.html
+++ b/calculator.html
@@ -25,7 +25,12 @@
                 width: 100%;
                 background-color: #CDDC39;
                 height: 40px;
+                line-height: 40px;
                 border-radius: 10px;
+                text-align: right;
+                font-size: 26px;
+                padding-right: 2%;
+                letter-spacing: 2px;
             }
             .button-box{
                 height: 243px;
@@ -46,6 +51,8 @@
                 margin: 5px 5px;
                 text-align: center;
                 border-radius: 5px;
+                font-size: 18px;
+                cursor: pointer;
             }
             .symbols{
                 width: 30%;
@@ -58,8 +65,35 @@
                 background-color: #007799;
                 width: 29%;
             }
-            
         </style>
+        <script>
+            console.log('欢迎来到我的计算器');
+            var expresstion = "";
+            function number_func(number){
+                expresstion += number;
+                set_user_input();
+            }
+            function set_user_input(){
+                let userInput = document.getElementById('user-input');
+                userInput.innerHTML = expresstion;
+            }
+            function operator(sign){
+                try{
+                    if (sign === 'clear'){
+                        expresstion = '';
+                    }else if(sign === 'backspace'){
+                        expresstion = String(expresstion).slice(0, -1);
+                    }else if(sign === '='){
+                        expresstion = eval(expresstion);
+                    }else{
+                        expresstion +=sign;
+                    }
+                }catch(e){
+                    expresstion = 'error';
+                }
+                set_user_input();
+            }
+        </script>
     </head>
     <body>
         <div class="calculator">
@@ -68,28 +102,28 @@
                 <div id="user-input"></div>
                 <div class="button-box">
                     <div class="numbers">
-                            <div class="number">7</div>
-                            <div class="number">8</div>
-                            <div class="number">9</div>
-                            <div class="number">4</div>
-                            <div class="number">5</div>
-                            <div class="number">6</div>
-                            <div class="number">3</div>
-                            <div class="number">2</div>
-                            <div class="number">1</div>
-                            <div class="number">0</div>
-                            <div class="number">00</div>
-                            <div class="number">.</div>
+                            <div class="number" onclick="number_func(7)">7</div>
+                            <div class="number" onclick="number_func(8)">8</div>
+                            <div class="number" onclick="number_func(9)">9</div>
+                            <div class="number" onclick="number_func(4)">4</div>
+                            <div class="number" onclick="number_func(5)">5</div>
+                            <div class="number" onclick="number_func(6)">6</div>
+                            <div class="number" onclick="number_func(3)">3</div>
+                            <div class="number" onclick="number_func(2)">2</div>
+                            <div class="number" onclick="number_func(1)">1</div>
+                            <div class="number" onclick="number_func(0)">0</div>
+                            <div class="number" onclick="number_func('00')">00</div>
+                            <div class="number" onclick="number_func('.')">.</div>
                         </div>
                     <div class="symbols">
-                        <div class="symbol"><---</div> 
-                        <div class="symbol">C</div>
-                        <div class="symbol">/</div>
-                        <div class="symbol">%</div>
-                        <div class="symbol">+</div>
-                        <div class="symbol">-</div>
-                        <div class="symbol">*</div>
-                        <div class="symbol">=</div>
+                        <div class="symbol" onclick="operator('backspace')"><--</div> 
+                        <div class="symbol" onclick="operator('clear')">C</div>
+                        <div class="symbol" onclick="operator('/')">/</div>
+                        <div class="symbol" onclick="operator('%')">%</div>
+                        <div class="symbol" onclick="operator('+')">+</div>
+                        <div class="symbol" onclick="operator('-')">-</div>
+                        <div class="symbol" onclick="operator('*')">*</div>
+                        <div class="symbol" onclick="operator('=')">=</div>
                     </div>
                 </div>
                 <div>欢迎使用在线计算器</div>
