--- a/calculator.html
+++ b/calculator.html
@@ -2,12 +2,16 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta content="user-scalable=no;" name="viewport" />
         <title>calculator</title>
         <style type="text/css" media="screen">
+        body{
+            background-color: black;
+            color: white;
+        }
+        @media screen and (min-device-width: 1024px){
             body{
-                background-color: black;
                 font-size: 16px;
-                color: white;
             }
             .calculator{
                 border: 1px white solid;
@@ -22,7 +26,7 @@
                 margin-bottom: 1%;
             }
             #user-input{
-                width: 100%;
+                width: 94%;
                 background-color: #CDDC39;
                 height: 40px;
                 line-height: 40px;
@@ -34,8 +38,7 @@
             }
             .button-box{
                 height: 243px;
-/*                border: 1px solid white;
-*/                margin: 10px 0px;
+                margin: 10px 0px;
             }
             .numbers{
                 width: 69%;
@@ -65,6 +68,67 @@
                 background-color: #007799;
                 width: 29%;
             }
+        }
+        @media screen and (max-device-width: 480px){
+            body{
+                font-size: 40px;
+            }
+            .calculator{
+                border: 1px white solid;
+                width: 95%;
+                margin: 20px auto;
+                height: 1000px;
+                position: relative;
+            }
+            .content{
+                margin: 1% 1%;
+                display: relative;
+            }
+            #calculator-name{
+                margin-bottom: 1%;
+                text-align: center;
+            }
+            #user-input, .button-box{
+                margin: 5px auto;
+            }
+            #user-input{
+                background-color: #CDDC39;
+                height: 200px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                border-radius: 10px;
+                padding-right: 2%;
+                letter-spacing: 2px;
+            }
+            .button-box{
+                height: 243px;
+                margin: 10px 0px;
+            }
+            .number, .symbol{
+                display: inline-block;
+                height: 100px;
+                line-height: 100px;
+                margin: 5px 5px;
+                text-align: center;
+                border-radius: 5px;
+                font-size: 18px;
+                cursor: pointer;
+                font-size: 1.5em;
+                width: 23%;
+            }
+            .symbol{
+                background-color: #FF3333;
+            }
+            .number{
+                background-color: #007799;
+            }
+            .welcome{
+                position: absolute;;
+                bottom: 0px;
+            }
+        }
+            
         </style>
         <script>
             console.log('欢迎来到我的计算器');
@@ -102,19 +166,19 @@
                 <div id="user-input"></div>
                 <div class="button-box">
                     <div class="numbers">
-                            <div class="number" onclick="number_func(7)">7</div>
-                            <div class="number" onclick="number_func(8)">8</div>
-                            <div class="number" onclick="number_func(9)">9</div>
-                            <div class="number" onclick="number_func(4)">4</div>
-                            <div class="number" onclick="number_func(5)">5</div>
-                            <div class="number" onclick="number_func(6)">6</div>
-                            <div class="number" onclick="number_func(3)">3</div>
-                            <div class="number" onclick="number_func(2)">2</div>
-                            <div class="number" onclick="number_func(1)">1</div>
-                            <div class="number" onclick="number_func(0)">0</div>
-                            <div class="number" onclick="number_func('00')">00</div>
-                            <div class="number" onclick="number_func('.')">.</div>
-                        </div>
+                        <div class="number" onclick="number_func(7)">7</div>
+                        <div class="number" onclick="number_func(8)">8</div>
+                        <div class="number" onclick="number_func(9)">9</div>
+                        <div class="number" onclick="number_func(4)">4</div>
+                        <div class="number" onclick="number_func(5)">5</div>
+                        <div class="number" onclick="number_func(6)">6</div>
+                        <div class="number" onclick="number_func(3)">3</div>
+                        <div class="number" onclick="number_func(2)">2</div>
+                        <div class="number" onclick="number_func(1)">1</div>
+                        <div class="number" onclick="number_func(0)">0</div>
+                        <div class="number" onclick="number_func('00')">00</div>
+                        <div class="number" onclick="number_func('.')">.</div>
+                    </div>
                     <div class="symbols">
                         <div class="symbol" onclick="operator('backspace')"><--</div> 
                         <div class="symbol" onclick="operator('clear')">C</div>
@@ -126,7 +190,7 @@
                         <div class="symbol" onclick="operator('=')">=</div>
                     </div>
                 </div>
-                <div>欢迎使用在线计算器</div>
+                <div class="welcome">欢迎使用在线计算器</div>
             </div>
         </div>
     </body>
