用户输入过长断句

--- a/calculator.html
+++ b/calculator.html
@@ -39,6 +39,7 @@
                 font-size: 26px;
                 padding-right: 2%;
                 letter-spacing: 2px;
+                font-size: 1.5em;
             }
             .button-box{
                 height: 243px;
@@ -107,6 +108,8 @@
                 border-radius: 10px;
                 padding-right: 2%;
                 letter-spacing: 2px;
+                font-size: 1.5em;
+                word-wrap: break-word;
             }
             .button-box{
                 height: 243px;
