--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta content="user-scalable=no;" name="viewport" />
+        <meta content="user-scalable=no" name="viewport">
         <title>calculator</title>
         <style type="text/css" media="screen">
         body{
@@ -29,7 +29,7 @@
             #calculator-name{
                 margin-bottom: 1%;
             }
-            #user-input{
+/*            #user-input{
                 width: 94%;
                 background-color: #CDDC39;
                 height: 40px;
@@ -41,7 +41,7 @@
                 letter-spacing: 2px;
                 font-size: 1.5em;
                 word-wrap: break-word;
-            }
+            }*/
             .button-box{
                 height: 243px;
                 margin: 10px 0px;
@@ -73,6 +73,31 @@
             .number{
                 background-color: #007799;
                 width: 29%;
+            }
+            .bottom-box{
+                display: flex;
+                justify-content: space-between;
+                align-items: baseline;
+            }
+            .copy{
+                background-color: #009688;
+                height: 33px;
+                line-height: 33px;
+                text-align: center;
+                margin-right: 2%;
+                width: 18%;
+                border-radius: 5px;
+            }
+            input{
+                width: 100%;
+                height: 40px;
+                border-radius: 10px;
+                border-style: none;
+                background-color: #CDDC39;
+                color: white;
+                font-size: 26px;
+                text-align: right;
+                letter-spacing: 2px;
             }
         }
         @media screen and (max-device-width: 480px){
@@ -112,6 +137,10 @@
                 font-size: 1.5em;
                 word-wrap: break-word;
             }
+            #input-content{
+                width: 100%;
+
+            }
             .button-box{
                 height: 243px;
                 margin: 10px 0px;
@@ -122,7 +151,7 @@
                 line-height: 100px;
                 margin: 5px 5px;
                 text-align: center;
-                border-radius: 5px;
+                border-radius: 0.5px;
                 font-size: 18px;
                 cursor: pointer;
                 font-size: 1.5em;
@@ -134,9 +163,23 @@
             .number{
                 background-color: #007799;
             }
-            .welcome{
-                position: absolute;;
+            .bottom-box{
+                position: absolute;
                 bottom: 0px;
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                margin-bottom: 2%;
+                align-items: baseline;
+            }
+            .copy{
+                background-color: #009688;
+                margin-right: 3%;
+                height: 100px;
+                width: 20%;
+                line-height: 100px;
+                border-radius: 5px;
+                text-align: center;
             }
         }
             
@@ -149,8 +192,8 @@
                 set_user_input();
             }
             function set_user_input(){
-                let userInput = document.getElementById('user-input');
-                userInput.innerHTML = expresstion;
+                let userInput = document.getElementById('input-content');
+                userInput.value = expresstion;
             }
             function operator(sign){
                 try{
@@ -168,13 +211,18 @@
                 }
                 set_user_input();
             }
+            function copy(){
+                document.getElementById('input-content').select();
+                document.execCommand("copy");
+                alert('复制成功')
+            }
         </script>
     </head>
     <body>
         <div class="calculator">
             <div class="content">
                 <div id="calculator-name">我的计算器</div>
-                <div id="user-input"></div>
+                <div id="user-input"><input id="input-content" type='text'></div>
                 <div class="button-box">
                     <div class="numbers">
                         <div class="number" onselectstart="return false" onclick="number_func(7)">7</div>
@@ -201,7 +249,10 @@
                         <div class="symbol" onselectstart="return false" onclick="operator('=')">=</div>
                     </div>
                 </div>
-                <div class="welcome">欢迎使用在线计算器</div>
+                <div class='bottom-box'>
+                    <div class="welcome">欢迎使用在线计算器</div>
+                    <div class="copy" onclick="copy()">一键复制</div>
+                </div>
             </div>
         </div>
     </body>
