--- a/calculator.html
+++ b/calculator.html
@@ -17,7 +17,7 @@
                 border: 1px white solid;
                 width: 40%;
                 margin: 20px auto;
-                height: 400px;
+                height: 430px;
                 position: absolute;
                 top: 50%;
                 left: 50%;
@@ -88,7 +88,7 @@
                 width: 18%;
                 border-radius: 5px;
             }
-            input{
+            textarea{
                 width: 100%;
                 height: 40px;
                 border-radius: 10px;
@@ -126,7 +126,7 @@
                 margin: 5px auto;
             }
             #user-input{
-                background-color: #CDDC39;
+/*                background-color: #CDDC39;
                 height: 200px;
                 display: flex;
                 flex-direction: column;
@@ -135,11 +135,18 @@
                 padding-right: 2%;
                 letter-spacing: 2px;
                 font-size: 1.5em;
-                word-wrap: break-word;
+                word-wrap: break-word;*/
             }
-            #input-content{
-                width: 100%;
-
+            textarea{
+                background-color: #CDDC39;
+                height: 200px;
+                border-radius: 10px;
+                font-size: 1.5em;
+                letter-spacing: 2px;
+                width: 99%;
+                margin:1% auto;
+                word-wrap: break-word;
+                color: white;
             }
             .button-box{
                 height: 243px;
@@ -222,7 +229,9 @@
         <div class="calculator">
             <div class="content">
                 <div id="calculator-name">我的计算器</div>
-                <div id="user-input"><input id="input-content" type='text'></div>
+                <div id="user-input"><!-- <input id="input-content" type='textarea'> -->
+                    <textarea name="" id="input-content"></textarea>
+                </div>
                 <div class="button-box">
                     <div class="numbers">
                         <div class="number" onselectstart="return false" onclick="number_func(7)">7</div>
