--- a/calculator.html
+++ b/calculator.html
@@ -29,19 +29,6 @@
             #calculator-name{
                 margin-bottom: 1%;
             }
-/*            #user-input{
-                width: 94%;
-                background-color: #CDDC39;
-                height: 40px;
-                line-height: 40px;
-                border-radius: 10px;
-                text-align: right;
-                font-size: 26px;
-                padding-right: 2%;
-                letter-spacing: 2px;
-                font-size: 1.5em;
-                word-wrap: break-word;
-            }*/
             .button-box{
                 height: 243px;
                 margin: 10px 0px;
@@ -99,6 +86,10 @@
                 text-align: right;
                 letter-spacing: 2px;
             }
+            time{
+                margin: 2px 0px;
+                display: block;
+            }
         }
         @media screen and (max-device-width: 480px){
             body{
@@ -108,7 +99,7 @@
                 border: 1px white solid;
                 width: 95%;
                 margin: 20px auto;
-                height: 1000px;
+                height: 1071px;
                 position: absolute;
                 top: 50%;
                 left: 50%;
@@ -124,18 +115,6 @@
             }
             #user-input, .button-box{
                 margin: 5px auto;
-            }
-            #user-input{
-/*                background-color: #CDDC39;
-                height: 200px;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                border-radius: 10px;
-                padding-right: 2%;
-                letter-spacing: 2px;
-                font-size: 1.5em;
-                word-wrap: break-word;*/
             }
             textarea{
                 background-color: #CDDC39;
@@ -188,47 +167,20 @@
                 border-radius: 5px;
                 text-align: center;
             }
+            time{
+                display: block;
+                text-align: center;
+                margin: 0 auto;
+            }
         }
             
         </style>
-        <script>
-            console.log('欢迎来到我的计算器');
-            var expresstion = "";
-            function number_func(number){
-                expresstion += number;
-                set_user_input();
-            }
-            function set_user_input(){
-                let userInput = document.getElementById('input-content');
-                userInput.value = expresstion;
-            }
-            function operator(sign){
-                try{
-                    if (sign === 'clear'){
-                        expresstion = '';
-                    }else if(sign === 'backspace'){
-                        expresstion = String(expresstion).slice(0, -1);
-                    }else if(sign === '='){
-                        expresstion = eval(expresstion);
-                    }else{
-                        expresstion +=sign;
-                    }
-                }catch(e){
-                    expresstion = 'error';
-                }
-                set_user_input();
-            }
-            function copy(){
-                document.getElementById('input-content').select();
-                document.execCommand("copy");
-                alert('复制成功')
-            }
-        </script>
     </head>
     <body>
         <div class="calculator">
             <div class="content">
                 <div id="calculator-name">我的计算器</div>
+                <time id="mytime"></time>
                 <div id="user-input"><!-- <input id="input-content" type='textarea'> -->
                     <textarea name="" id="input-content"></textarea>
                 </div>
@@ -264,5 +216,45 @@
                 </div>
             </div>
         </div>
+        <script>
+            console.log('欢迎来到我的计算器');
+            var expresstion = "";
+            function number_func(number){
+                expresstion += number;
+                set_user_input();
+            }
+            function set_user_input(){
+                let userInput = document.getElementById('input-content');
+                userInput.value = expresstion;
+            }
+            function operator(sign){
+                try{
+                    if (sign === 'clear'){
+                        expresstion = '';
+                    }else if(sign === 'backspace'){
+                        expresstion = String(expresstion).slice(0, -1);
+                    }else if(sign === '='){
+                        expresstion = eval(expresstion);
+                    }else{
+                        expresstion +=sign;
+                    }
+                }catch(e){
+                    expresstion = 'error';
+                }
+                set_user_input();
+            }
+            function copy(){
+                document.getElementById('input-content').select();
+                document.execCommand("copy");
+                alert('复制成功')
+            }
+            function set_current_time(){
+                let curDate = new Date();
+                let mytime = curDate.toLocaleDateString() + ' ' + curDate.toLocaleTimeString();
+                var timeElement = document.getElementById('mytime');
+                timeElement.innerHTML = mytime;
+            }
+            setInterval(set_current_time, 1000);
+        </script>
     </body>
 </html>
