--- a/calculator.html
+++ b/calculator.html
@@ -175,6 +175,49 @@
         }
             
         </style>
+        <script>
+            console.log('欢迎来到我的计算器');
+            function mycaculator(){
+                var expresstion = "";
+                function number_func(number){
+                    expresstion += number;
+                    set_user_input();
+                }
+                function set_user_input(){
+                    let userInput = document.getElementById('input-content');
+                    userInput.value = expresstion;
+                }
+                function operator(sign){
+                    try{
+                        if (sign === 'clear'){
+                            expresstion = '';
+                        }else if(sign === 'backspace'){
+                            expresstion = String(expresstion).slice(0, -1);
+                        }else if(sign === '='){
+                            expresstion = eval(expresstion);
+                        }else{
+                            expresstion +=sign;
+                        }
+                    }catch(e){
+                        expresstion = 'error';
+                    }
+                    set_user_input();
+                }
+                function copy(){
+                    document.getElementById('input-content').select();
+                    document.execCommand("copy");
+                    alert('复制成功')
+                }
+                function set_current_time(){
+                    let curDate = new Date();
+                    let mytime = curDate.toLocaleDateString() + ' ' + curDate.toLocaleTimeString();
+                    var timeElement = document.getElementById('mytime');
+                    timeElement.innerHTML = mytime;
+                }
+                setInterval(set_current_time, 1000);
+            }
+            window.onload = mycaculator();
+        </script>  
     </head>
     <body>
         <div class="calculator">
@@ -216,45 +259,5 @@
                 </div>
             </div>
         </div>
-        <script>
-            console.log('欢迎来到我的计算器');
-            var expresstion = "";
-            function number_func(number){
-                expresstion += number;
-                set_user_input();
-            }
-            function set_user_input(){
-                let userInput = document.getElementById('input-content');
-                userInput.value = expresstion;
-            }
-            function operator(sign){
-                try{
-                    if (sign === 'clear'){
-                        expresstion = '';
-                    }else if(sign === 'backspace'){
-                        expresstion = String(expresstion).slice(0, -1);
-                    }else if(sign === '='){
-                        expresstion = eval(expresstion);
-                    }else{
-                        expresstion +=sign;
-                    }
-                }catch(e){
-                    expresstion = 'error';
-                }
-                set_user_input();
-            }
-            function copy(){
-                document.getElementById('input-content').select();
-                document.execCommand("copy");
-                alert('复制成功')
-            }
-            function set_current_time(){
-                let curDate = new Date();
-                let mytime = curDate.toLocaleDateString() + ' ' + curDate.toLocaleTimeString();
-                var timeElement = document.getElementById('mytime');
-                timeElement.innerHTML = mytime;
-            }
-            setInterval(set_current_time, 1000);
-        </script>
-    </body>
+   </body>
 </html>
